Обновил настройки проекта

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,38 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Default ignored files
+/shelf/
+/workspace.xml
+
+# Rider ignored files
+/.idea.dosymep.iml
+/modules.xml
+/projectSettingsUpdater.xml
+/contentModel.xml
+
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+
+# User specific
+**/.idea/**/workspace.xml
+**/.idea/**/tasks.xml
+**/.idea/shelf/*
+**/.idea/dictionaries
+**/.idea/httpRequests/
+
+# Sensitive or high-churn files
+**/.idea/**/dataSources/
+**/.idea/**/dataSources.ids
+**/.idea/**/dataSources.xml
+**/.idea/**/dataSources.local.xml
+**/.idea/**/sqlDataSources.xml
+**/.idea/**/dynamic.xml
+
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+**/.idea/**/*.iml
+**/.idea/**/contentModel.xml
+**/.idea/**/modules.xml
