--- a/NavisPlugins/NavisPlugins.csproj
+++ b/NavisPlugins/NavisPlugins.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <Platforms>AnyCPU;x64</Platforms>
+    <TargetFramework>net48</TargetFramework>
+    <Platforms>x64</Platforms>
+    <Configurations>R2022;D2022</Configurations>
   </PropertyGroup>
 
 </Project>
