--- a/NavisDisciplineChecker/NavisDisciplineChecker.csproj
+++ b/NavisDisciplineChecker/NavisDisciplineChecker.csproj
@@ -2,29 +2,46 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
 		<Platforms>x64</Platforms>
-		<Configurations>R2022;D2022</Configurations>
+		<Configurations>D2022;R2022</Configurations>
 	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='D2022|x64'">
+		<NavisVersion>2022</NavisVersion>
+		<OutputPath>bin\x64\D2022</OutputPath>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='R2022|x64'">
+		<NavisVersion>2022</NavisVersion>
+		<OutputPath>bin\x64\R2022</OutputPath>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<Reference Include="Autodesk.Navisworks.Api">
 			<HintPath>$(ProgramW6432)\Autodesk\Navisworks Manage 2022\Autodesk.Navisworks.Api.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		
 		<Reference Include="Autodesk.Navisworks.Api">
 			<HintPath>$(ProgramW6432)\Autodesk\Navisworks Manage 2022\Autodesk.Navisworks.Clash.dll</HintPath>
 			<Private>False</Private>
 		</Reference>
+		
 		<Reference Include="DevExpress.Data.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
 		  <HintPath>C:\Program Files (x86)\DevExpress 21.2\Components\Bin\Framework\DevExpress.Data.v21.2.dll</HintPath>
 		</Reference>
+		
 		<Reference Include="DevExpress.Docs.v21.2, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
 		  <HintPath>C:\Program Files (x86)\DevExpress 21.2\Components\Bin\Framework\DevExpress.Docs.v21.2.dll</HintPath>
 		</Reference>
+		
 		<Reference Include="DevExpress.Office.v21.2.Core, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
 		  <HintPath>C:\Program Files (x86)\DevExpress 21.2\Components\Bin\Framework\DevExpress.Office.v21.2.Core.dll</HintPath>
 		</Reference>
+		
 		<Reference Include="DevExpress.Spreadsheet.v21.2.Core, Version=21.2.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a">
 		  <HintPath>C:\Program Files (x86)\DevExpress 21.2\Components\Bin\Framework\DevExpress.Spreadsheet.v21.2.Core.dll</HintPath>
 		</Reference>
+		
 		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
 </Project>
