--- a/NavisPlugins/NavisPlugins.csproj
+++ b/NavisPlugins/NavisPlugins.csproj
@@ -3,7 +3,17 @@
   <PropertyGroup>
     <TargetFramework>net48</TargetFramework>
     <Platforms>x64</Platforms>
-    <Configurations>R2022;D2022</Configurations>
+    <Configurations>D2022;R2022</Configurations>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='D2022|x64'">
+    <NavisVersion>2022</NavisVersion>
+    <OutputPath>bin\x64\Debug</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='R2022|x64'">
+    <NavisVersion>2022</NavisVersion>
+    <OutputPath>bin\x64\Release</OutputPath>
   </PropertyGroup>
 
 </Project>
