Добавил получение отчета коллизий

--- a/NavisDisciplineChecker/NavisDisciplineChecker.csproj
+++ b/NavisDisciplineChecker/NavisDisciplineChecker.csproj
@@ -44,4 +44,8 @@
 		
 		<Reference Include="System.Windows.Forms" />
 	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Reports" />
+	</ItemGroup>
 </Project>
